--- a/assets/app/templates/static/main.html
+++ b/assets/app/templates/static/main.html
@@ -4,5 +4,5 @@
     <img src="static/images/network.png" alt="Network Measurements"><br>
     Test your network quality like you never did
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="/speedtest">Get me to the test page <span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-primary" ng-href="/speedtest">Get me to the test page <span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
