--- a/templates/stylesheets.html
+++ b/templates/stylesheets.html
@@ -7,4 +7,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles/app.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/angular-notify/angular-notify.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/angular-material/angular-material.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/jquery-ui/themes/excite-bike/jquery-ui.min.css' %}">
 {% endcompress %}
